<resources>
    <string name="app_name">Thuttu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="thuttu">Thuttu</string>
    <string name="shopping_deals_amp_concepts">Shopping Deals &amp; Concepts</string>
    <string name="get_deal">Get Deal</string>
    <string name="symbolrup">\u20B9</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="stores">Stores</string>
    <string name="recent_stores">Recent Stores</string>
    <string name="clear">Clear</string>
    <string name="all_stores_a_to_z">All Stores [A to Z]</string>
    <string name="search">Search</string>
    <string name="recent_searched">Recent Searched</string>
    <string name="most_searched">Most Searched</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="choose_profile_image">Choose profile image</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="symbol">Symbol</string>
    <string name="general">General</string>
    <string name="notify_deals">Notify Deals</string>
    <string name="notifications">Notifications</string>
    <string name="receive_updates_of_sales">Receive updates of sales</string>
    <string name="latest_deals">Latest Deals</string>
    <string name="get_latest_deal_updates">Get latest deal updates</string>
    <string name="get_featured_deal_updates">Get featured deal updates</string>
    <string name="featured_deals">Featured Deals</string>
    <string name="comments">Comments</string>
    <string name="get_comment_updates">Get Comment updates</string>
    <string name="thuttu_thuttu_com_official_app">Thuttu - Thuttu.com Official App.</string>
    <string name="thuttu_com_is_a_place_where_you_can_find_deals">
        Thuttu.com is a place, where you can find deals/coupens for India online shopping. Free samples, hot deals and offer updates.</string>
    <string name="website">Website: </string>
    <string name="http_thuttu_com"><u>http://thuttu.com</u></string>
    <string name="email">Email:</string>
    <string name="service_thuttu_com"><u>service@thuttu.com</u></string>
    <string name="facebook">Facebook:</string>
    <string name="http_facebook_com_thuttucom"><u>http://facebook.com/thuttucom</u></string>
    <string name="twitter">Twitter:</string>
    <string name="http_twitter_com_thuttucom"><u>http://twitter.com/thuttucom</u></string>
    <string name="share_thuttu_app">Share Thuttu App</string>
    <string name="this_page_is_used">
        This page is used to inform App visitors regarding our policies with the collection, use, and
    disclosure of Personal Information if anyone decided to use our Service.\n\n
    Thuttu.com built the <u>Thuttu android app</u> as a Free app. This SERVICE is provided by Thuttu.com at no cost and is intended for use as is.\n\n
    If you choose to use our Service,then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service.
    We will not use of share your information with anyone except as described in this Privacy Policy.\n\n

    <b>Information Collection and Use</b>\n\n
    For a better experience, while using our Service, we may require you to provide us with certain personally
    identifiable information. The information that we request is will be retained by us and used as described in this privacy policy.\n\n
    We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users install out app, register
    on the app, subscribe to the newsletter, and in connection with other activities, services, features or resources we make available on our App.</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="save_deal">Save Deal</string>
    <string name="share">Share</string>
</resources>
