<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.UserInformationActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3sdp"
        android:text="@string/enter_your_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/_3sdp"
        android:text="@string/choose_profile_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="10dp"
            android:src="@drawable/boss"
            app:civ_border_color="@color/darkgrey"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/darkgrey" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <RadioButton
                android:id="@+id/radioMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/radioWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman" />



            <RadioButton
                android:id="@+id/radioSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol" />

            <RadioButton
                android:id="@+id/radioGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general" />



        </RadioGroup>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profileImagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_3sdp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>