<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NotificationsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/notifications"
        android:textSize="@dimen/_13sdp" />

    <RelativeLayout
        android:id="@+id/relativeOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_deals"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_updates_of_sales"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <Switch
            android:id="@+id/notifyDealsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />


    <RelativeLayout
        android:id="@+id/layoutLatestDeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLatestDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_deals"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtGetDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgrey"
                android:text="@string/get_latest_deal_updates"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkLatest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />

    <RelativeLayout
        android:id="@+id/relativeFeaturedDeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFeaturedDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/featured_deals"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtFeaturedupd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_featured_deal_updates"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxFeaturedDeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />

    <RelativeLayout
        android:id="@+id/relativeComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtGetCom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_comment_updates" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</LinearLayout>

